Add SimpleWeno limiter

--- a/src/Evolution/DiscontinuousGalerkin/SlopeLimiters/CMakeLists.txt
+++ b/src/Evolution/DiscontinuousGalerkin/SlopeLimiters/CMakeLists.txt
@@ -13,5 +13,6 @@ target_link_libraries(
   ${LIBRARY}
   INTERFACE DataStructures
   INTERFACE Domain
+  INTERFACE Interpolation
   INTERFACE LinearOperators
   )
