Add SlabJet analytic data

--- a/src/PointwiseFunctions/AnalyticSolutions/GrMhd/CMakeLists.txt
+++ b/src/PointwiseFunctions/AnalyticSolutions/GrMhd/CMakeLists.txt
@@ -6,6 +6,7 @@ set(LIBRARY GrMhdSolutions)
 set(LIBRARY_SOURCES
     AlfvenWave.cpp
     BondiMichel.cpp
+    SlabJet.cpp
     SmoothFlow.cpp
     )
 
